@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	7.108 (gritter) 9/11/06";
+	"@(#)/usr/ucb/otfdump.sl	7.109 (gritter) 9/11/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  7.108 (gritter) 9/11/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 7.108 (gritter) 9/11/06";
+static const char sccsid[] USED = "@(#)dpost.sl  7.109 (gritter) 9/11/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 7.109 (gritter) 9/11/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.108 (gritter) 9/11/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.109 (gritter) 9/11/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.108 (gritter) 9/11/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.109 (gritter) 9/11/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "7.108";
+const char revision[] = "7.109";
 /* SLIST */
 /*
 ext.h: * Sccsid @(#)ext.h	1.91 (gritter) 9/11/06
@@ -44,9 +44,9 @@ troff.d/draw.c: * Sccsid @(#)draw.c	1.3 (gritter) 8/8/05
 troff.d/makedev.c: * Sccsid @(#)makedev.c	1.15 (gritter) 9/1/06
 troff.d/otf.c: * Sccsid @(#)otf.c	1.58 (gritter) 8/12/06
 troff.d/otfdump.c: * Sccsid @(#)otfdump.c	1.15 (gritter) 3/16/06
-troff.d/pt.h: * Sccsid @(#)pt.h	1.52 (gritter) 8/12/06
-troff.d/t10.c: * Sccsid @(#)t10.c	1.90 (gritter) 9/11/06
-troff.d/t6.c: * Sccsid @(#)t6.c	1.178 (gritter) 9/11/06
+troff.d/pt.h: * Sccsid @(#)pt.h	1.53 (gritter) 9/11/06
+troff.d/t10.c: * Sccsid @(#)t10.c	1.91 (gritter) 9/11/06
+troff.d/t6.c: * Sccsid @(#)t6.c	1.179 (gritter) 9/11/06
 troff.d/troff.h: * Sccsid @(#)troff.h	1.26 (gritter) 8/12/06
 troff.d/unimap.c: * Sccsid @(#)unimap.c	1.13 (gritter) 2/16/06
 troff.d/unimap.h: * Sccsid @(#)unimap.h	1.2 (gritter) 12/22/05
@@ -59,11 +59,11 @@ troff.d/dpost.d/asciitype.c:	Sccsid @(#)asciitype.c	1.4 (gritter) 4/17/03
 troff.d/dpost.d/asciitype.h:	Sccsid @(#)asciitype.h	1.6 (gritter) 9/9/05	
 troff.d/dpost.d/color.c: * Sccsid @(#)color.c	1.5 (gritter) 11/29/05
 troff.d/dpost.d/comments.h: * Sccsid @(#)comments.h	1.5 (gritter) 8/23/05
-troff.d/dpost.d/dpost.c: * Sccsid @(#)dpost.c	1.154 (gritter) 9/2/06
+troff.d/dpost.d/dpost.c: * Sccsid @(#)dpost.c	1.155 (gritter) 9/11/06
 troff.d/dpost.d/dpost.h: * Sccsid @(#)dpost.h	1.7 (gritter) 4/25/06
 troff.d/dpost.d/draw.c: * Sccsid @(#)draw.c	1.5 (gritter) 11/28/05
 troff.d/dpost.d/ext.h: * Sccsid @(#)ext.h	1.5 (gritter) 1/6/06
-troff.d/dpost.d/gen.h: * Sccsid @(#)gen.h	1.14 (gritter) 3/12/06
+troff.d/dpost.d/gen.h: * Sccsid @(#)gen.h	1.15 (gritter) 9/11/06
 troff.d/dpost.d/getopt.c: * Sccsid @(#)getopt.c	1.8 (gritter) 8/2/05
 troff.d/dpost.d/glob.c: * Sccsid @(#)glob.c	1.3 (gritter) 8/9/05
 troff.d/dpost.d/makedev.c: * Sccsid @(#)makedev.c	1.1 (gritter) 9/4/05
